--- a/notebook/Problem1_classification.ipynb
+++ b/notebook/Problem1_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9c928acf",
+   "id": "02f97e40",
    "metadata": {},
    "source": [
     "# Problem\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edbaeac2",
+   "id": "4d97f5aa",
    "metadata": {},
    "source": [
     "### Data\n",
@@ -75,10 +75,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2955480f",
+   "execution_count": 1,
+   "id": "525e155e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/surichen/.pyenv/versions/3.8.13/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
@@ -90,8 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "30e67328",
+   "execution_count": 2,
+   "id": "04899770",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +111,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,16 +122,137 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5288f547",
+   "id": "ee348ee5",
    "metadata": {},
    "source": [
     "# Feature Engineering"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a15edae",
+   "metadata": {},
+   "source": [
+    "Text cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7cb0b92a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'product_matcher'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mproduct_matcher\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'product_matcher'"
+     ]
+    }
+   ],
+   "source": [
+    "import ppoet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "de9a4da0",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TITLE</th>\n",
+       "      <th>SHORT_DESCRIPTION</th>\n",
+       "      <th>PRODUCT_DESCRIPTION</th>\n",
+       "      <th>IRI_CATEGORY_NAME</th>\n",
+       "      <th>label</th>\n",
+       "      <th>TITLE_CLEANED</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KETO FLCK CHKN CHPS BBQ 3 OZ</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>KETO FLCK CHKN CHPS BBQ 3 OZ</td>\n",
+       "      <td>SALTY SNACKS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ketoflckchknchpsbbq3oz ketoflckchknchpsbbq3oz ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          TITLE SHORT_DESCRIPTION  \\\n",
+       "0  KETO FLCK CHKN CHPS BBQ 3 OZ               NaN   \n",
+       "\n",
+       "            PRODUCT_DESCRIPTION IRI_CATEGORY_NAME  label  \\\n",
+       "0  KETO FLCK CHKN CHPS BBQ 3 OZ      SALTY SNACKS      1   \n",
+       "\n",
+       "                                       TITLE_CLEANED  \n",
+       "0  ketoflckchknchpsbbq3oz ketoflckchknchpsbbq3oz ...  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "80eccb4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.dropna(subset=['TITLE']).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "19fb8fff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['TITLE_CLEANED'] = data['TITLE'].apply(lambda x: clean_string(x))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92af1fb2",
+   "id": "82462648",
    "metadata": {},
    "outputs": [],
    "source": []
