update utils and experiments config

--- a/notebook/Problem1_data_prep.ipynb
+++ b/notebook/Problem1_data_prep.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "Since there is only one feature available, product description, we need to firstly vectorized the text into model learnable features. In NLP area, such vectorization process is called Word2Vec. In this exercise, I used 2 methods to encode the product descriptions \n",
     "- TFIDF\n",
-    "- BERT Word Embedding\n",
+    "- BERT Sentence Embedding\n",
     "\n",
     "\n",
     "### Algorithms\n",
@@ -78,16 +78,7 @@
    "execution_count": 1,
    "id": "525e155e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/surichen/.pyenv/versions/3.8.13/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
@@ -125,7 +116,11 @@
    "id": "ee348ee5",
    "metadata": {},
    "source": [
-    "# Feature Engineering"
+    "# Feature Engineering\n",
+    "\n",
+    "Since we are dealing with text data, we need to firstly vectorized the text into features. There are multiple word2vec technique we could use. From simple bag of words to embedding. For the assignment purpose, I chose 2 methods\n",
+    "- TF-IDF\n",
+    "- Sentence-BERT embedding: Pre-trained sentence embeddings using Siameses BERT-Networks"
    ]
   },
   {
@@ -141,26 +136,14 @@
    "execution_count": 3,
    "id": "7cb0b92a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'product_matcher'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mproduct_matcher\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'product_matcher'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import ppoet"
+    "from product_matcher.processor import clean_string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "de9a4da0",
    "metadata": {
     "scrolled": true
@@ -192,7 +175,6 @@
        "      <th>PRODUCT_DESCRIPTION</th>\n",
        "      <th>IRI_CATEGORY_NAME</th>\n",
        "      <th>label</th>\n",
-       "      <th>TITLE_CLEANED</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -203,7 +185,6 @@
        "      <td>KETO FLCK CHKN CHPS BBQ 3 OZ</td>\n",
        "      <td>SALTY SNACKS</td>\n",
        "      <td>1</td>\n",
-       "      <td>ketoflckchknchpsbbq3oz ketoflckchknchpsbbq3oz ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -213,14 +194,11 @@
        "                          TITLE SHORT_DESCRIPTION  \\\n",
        "0  KETO FLCK CHKN CHPS BBQ 3 OZ               NaN   \n",
        "\n",
-       "            PRODUCT_DESCRIPTION IRI_CATEGORY_NAME  label  \\\n",
-       "0  KETO FLCK CHKN CHPS BBQ 3 OZ      SALTY SNACKS      1   \n",
-       "\n",
-       "                                       TITLE_CLEANED  \n",
-       "0  ketoflckchknchpsbbq3oz ketoflckchknchpsbbq3oz ...  "
+       "            PRODUCT_DESCRIPTION IRI_CATEGORY_NAME  label  \n",
+       "0  KETO FLCK CHKN CHPS BBQ 3 OZ      SALTY SNACKS      1  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,31 +209,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "80eccb4a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = data.dropna(subset=['TITLE']).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "19fb8fff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['TITLE_CLEANED'] = data['TITLE'].apply(lambda x: clean_string(x))"
+    "data['TITLE_CLEANED'] = data['TITLE'].apply(lambda x: clean_string(x))\n",
+    "data = data.dropna(subset=['TITLE_CLEANED']).reset_index(drop=True)\n",
+    "# shuffling data\n",
+    "data = data.sample(frac=1)\n",
+    "data.reset_index(inplace=True)\n",
+    "data.to_csv(\"../data/product_categories_cleaned.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89ea9a95",
+   "metadata": {},
+   "source": [
+    "# Train - Test split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d068a38",
+   "metadata": {},
+   "source": [
+    "1. Shuffle data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "82462648",
+   "execution_count": 22,
+   "id": "d1f153c3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "split = int(0.75 * len(data))\n",
+    "\n",
+    "train = data.loc[:split,]\n",
+    "test = data.loc[split:,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "566a801e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.to_csv('../data/problem1_training_data.csv', index=False)\n",
+    "test.to_csv('../data/problem1_testing_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70405c71",
+   "metadata": {},
+   "source": [
+    "# TF-IDF\n",
+    "\n",
+    "Note: to fit a tfidf vectorizer, we could only use training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8e7b8993",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "corpus = train.TITLE_CLEANED.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "cc554ced",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(85332, 22966)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer = TfidfVectorizer()\n",
+    "X_tfidf = vectorizer.fit_transform(corpus)\n",
+    "X_tfidf.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6101c55",
+   "metadata": {},
+   "source": [
+    "saving vectorizer and tf_idf features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "49eee921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(vectorizer, open(\"../product_matcher/model/tfidfvectorizer.pickle\", \"wb\"))\n",
+    "pickle.dump(X_tfidf, open(\"../data/problem1_tfidf.pickle\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38ff5480",
+   "metadata": {},
+   "source": [
+    "There are total 113,775 vocabularies in this corpus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cb26d81",
+   "metadata": {},
+   "source": [
+    "# Sentence Bert"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a96f3fc",
+   "metadata": {},
+   "source": [
+    "sentence embedding generates 768 dimensions of feature spaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a751a067",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "model = SentenceTransformer('all-mpnet-base-v2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "46e6f5ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_bert_train = sentence_embeddings = model.encode(corpus)\n",
+    "pickle.dump(X_bert_train, open(\"../data/problem1_sentence_emb_train.pickle\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "108cd317",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = test.TITLE_CLEANED.tolist()\n",
+    "X_bert_test =  model.encode(corpus)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "fd91b42d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(X_bert_test, open(\"../data/problem1_sentence_emb_test.pickle\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dfca2a7",
+   "metadata": {},
+   "source": [
+    "# Building Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "830a7f5c",
+   "metadata": {},
+   "source": [
+    "experiments (for each model)\n",
+    "- Number of training samples\n",
+    "    - Accuracy\n",
+    "        - F score\n",
+    "        - Recalls\n",
+    "        - Precisions\n",
+    "    - Complexity\n",
+    "        - Training/Learning time\n",
+    "        - Prediction time\n",
+    "    - Convergence Plot"
+   ]
   }
  ],
  "metadata": {
